# imagemarker

./: CMakeLists.txt  README.md  client.cpp  common.cpp  common.hpp  image_processor.cpp  image_processor.hpp  server.cpp
